Project/main/default/objects/HotelPayment__c/fields/Approve_Reject__c.field-meta.xml
<CustomField>
    <fullName>Approve_Reject__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <color>#33CCFF</color>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <color>#009900</color>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <color>#FF0000</color>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>