Project/main/default/objects/HotelPayment__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <label>Package</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Package__c.CreatedById</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Hotel Payments</relationshipLabel>
    <relationshipName>Hotel_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>