Project/main/default/objects/HotelPayment__c/fields/Payment_Slip__c.field-meta.xml
<CustomField>
    <fullName>Payment_Slip__c</fullName>
    <description>Please select the image of Hotel Payment</description>
    <label>Payment Slip</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>