Project/main/default/objects/HotelPayment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approve_Reject__c</columns>
    <columns>Package__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>